Prevent horizontal scrolling

--- a/app/assets/stylesheets/tags.less
+++ b/app/assets/stylesheets/tags.less
@@ -2,6 +2,7 @@ body.tags.index {
 
   .tags .tag {
     margin-right: 10px;
+    float: left;
 
     &:last-of-type {
       margin-right: 0;
